--- a/project/src/lib/styles/globaal.css
+++ b/project/src/lib/styles/globaal.css
@@ -176,9 +176,11 @@ span {
 	font-size: 50px;
 }
 
+
+
 /****************************/
 /****************************/
-/******** DONUTCHART **********/
+/******** DONUTCHART ********/
 /****************************/
 /****************************/
 
@@ -231,6 +233,50 @@ span {
 	}
   }
 
+  .donut-text h2 {
+	color: rgba(206, 136, 255, 1);
+  }
+
+  .donut-text span {
+	color: rgba(206, 136, 255, 1);
+	font-weight: bold;
+  }
+ 
+
+
+/****************************/
+/****************************/
+/******** LINECHART *********/
+/****************************/
+/****************************/
+
+.grid-charts {
+	height: 100vh;
+}
+
+
+
+
+/****************************/
+/****************************/
+/********* BARCHART *********/
+/****************************/
+/****************************/
+
+.bar-chart {
+	height: 100vh;
+}
+
+
+/****************************/
+/****************************/
+/******** CONCLUSIE *********/
+/****************************/
+/****************************/
+
+.conclusion {
+	height: 100vh;
+}
 
 
 
@@ -239,14 +285,12 @@ span {
 
 
 
-
-
-
+/* 
 .grafiek {
 	margin-top: 3rem;
 	text-align: center;
-}
-
+} */
+/* 
 .grafiek-container {
 	display: flex;
 	justify-content: center;
@@ -270,4 +314,4 @@ svg {
 	pointer-events: none;
 	opacity: 0;
 	position: absolute;
-}
+} */
