--- a/project/src/lib/styles/globaal.css
+++ b/project/src/lib/styles/globaal.css
@@ -49,6 +49,29 @@ main {
 	color: #222;
 }
 
+/* SECTION PIJLEN */
+.page-section {
+	position: relative;
+	min-height: 100vh;      /* elke section full screen */
+	padding: 2em;
+  }
+  
+  .scroll-down {
+	position: absolute;
+	right: 2em;
+	bottom: 2em;
+	font-size: 5rem;
+	text-decoration: none;
+	color: rgba(206, 136, 255, 1);
+	transition: 0.2s;
+  }
+  
+  .scroll-down:hover {
+	transform: translateY(5px);
+	opacity: 0.7;
+  }
+
+
 /****************************/
 /****************************/
 /********** HEADER **********/
@@ -150,6 +173,9 @@ span {
 	user-select: none;
 }
 
+.arrow-stack {
+    text-decoration: none;
+}
 /****************************/
 /****************************/
 /***** TOTAAL AUTO'S ********/
@@ -184,7 +210,7 @@ span {
 /****************************/
 /****************************/
 
-.donut-section {
+#donut-section {
 	height: 100vh;
 	display: flex;
 	justify-content: space-between;
@@ -223,7 +249,7 @@ span {
 
   /* Mobiel: onder elkaar zetten */
   @media (max-width: 800px) {
-	.donut-section {
+	#donut-section {
 	  flex-direction: column;
 	  text-align: center;
 	}
@@ -250,11 +276,47 @@ span {
 /****************************/
 /****************************/
 
-.grid-charts {
+#grid-charts {
 	height: 100vh;
+	text-align: center;
+
 }
 
+.chart-wrapper {
+    display: flex;
+    justify-content: center;  /* grafiek centreren */
+    margin-top: 1.5rem;
+  }
 
+  .chart-caption {
+    margin-top: 2rem;
+    font-size: 1rem;
+    color: var(--text-color);
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.5;
+  }
+
+  #grid-charts h2 {
+    margin-bottom: 1rem;
+	color: rgba(206, 136, 255, 1);
+  }
+
+  .chart-container {
+    width: 100%;
+    max-width: 1000px;   /* ✔ maximale breedte */
+    height: 450px;
+    margin: 0 auto;     /* ✔ centreren */
+  }
+
+  /* Optioneel: op mobiel iets hogere hoogte */
+  @media (max-width: 600px) {
+    .chart-container {
+      height: 380px;
+      max-width: 100%;
+    }
+  }
 
 
 /****************************/
@@ -263,7 +325,7 @@ span {
 /****************************/
 /****************************/
 
-.bar-chart {
+#bar-chart {
 	height: 100vh;
 }
 
@@ -274,7 +336,7 @@ span {
 /****************************/
 /****************************/
 
-.conclusion {
+#conclusion {
 	height: 100vh;
 }
 
